--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20" >
     <tr>
-      <td><img src="download.jpg" alt="sanjay reddy profile pic"></td>
+      <td><img src="pic_1.jpg" alt="sanjay reddy profile pic"></td>
       <td><h1>sanjay reddy</h1>
       <p><em>i am a <strong>student</strong>.</em></p>
       <p>i love to swim</p></td>
